--- a/MarkovLogicNetwork/makefile
+++ b/MarkovLogicNetwork/makefile
@@ -1,7 +1,13 @@
+FLAGS=-std=c++11 -static-libstdc++
+LINK=-I ../dataHandling -L ../dataHandling
+
 main:test
 
-test: test.cpp mln.o dataset.o node.o
-	g++ $^ -o $@
+test: test.cpp mln.o insight.o 
+	g++ $(FLAGS) $^ -o $@ $(LINK) -ldataset
 
 %.o: %.cpp
-	g++ -c $^  
+	g++ $(FLAGS) -c $^ $(LINK) -ldataset -o $@  
+
+clean:
+	rm -rf test *.o
