--- a/MultinomialLogisticRegression/Makefile
+++ b/MultinomialLogisticRegression/Makefile
@@ -2,12 +2,11 @@ FLAGS=-std=c++11 -static-libstdc++
 LINK=-I ../dataHandling -I ./eigen-eigen-07105f7124f9 -L ../dataHandling
 
 main: test
-
+	
 test: test.cpp multiNomLogReg.o
-	g++ $(FLAGS) $^ -o $@ $(LINK) -ldataset
+	g++ $(FLAGS) $^ $(LINK) -ldataset -o $@
 
-
-%.o: %.cpp
+multiNomLogReg.o: multiNomLogReg.cpp
 	g++ $(FLAGS) -c $^ $(LINK) -ldataset -o $@
 
 clean:
